--- a/main.html
+++ b/main.html
@@ -1,33 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <link rel="stylesheet" href="styles.css" />
-  <title>Form Example</title>
-</head>
-<body>
-  
-  <form id="myForm">
-    <div>
-      <label for="firstName">First Name:</label>
-      <input type="text" id="firstName" name="firstName" required />
-    </div>
-    <div>
-      <label for="lastName">Last Name:</label>
-      <input type="text" id="lastName" name="lastName" required />
-    </div>
-    <div>
-      <label for="phone">Phone Number:</label>
-      <input type="text" id="phone" name="phone" required />
-    </div>
-    <div>
-      <label for="email">Email ID:</label>
-      <input type="email" id="email" name="email" required />
-    </div>
-    <button type="submit">Submit</button>
-  </form>
-
-  <script src="script.js"></script>
-</body>
-</html>
+<form id="myForm">
+  <div>
+    <label for="firstName">First Name:</label>
+    <input type="text" id="firstName" name="First Name" required />
+  </div>
+  <div>
+    <label for="lastName">Last Name:</label>
+    <input type="text" id="lastName" name="Last Name" required />
+  </div>
+  <div>
+    <label for="phone">Phone Number:</label>
+    <input type="text" id="phone" name="Phone Number" required />
+  </div>
+  <div>
+    <label for="email">Email ID:</label>
+    <input type="email" id="email" name="Email ID" required />
+  </div>
+  <button type="submit">Submit</button>
+</form>
